--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+# dist directory (generated code)
+dist
+
 # TypeScript v1 declaration files
 typings/
 
